--- a/ide/ide-core/src/main/resources/ide/welcome.html
+++ b/ide/ide-core/src/main/resources/ide/welcome.html
@@ -30,14 +30,18 @@
 		  line-height: initial;
 		}
 	</style>
+	
+	<link rel="stylesheet" href="/services/v3/web/resources/font/font.css">
+    
   </head>
   <body class="page">
 	<h1>Welcome to Eclipse Dirigible &trade;</h1><br><br><br>
 	<p style="font-size: 1.2em"><a href="http://www.dirigible.io" target=_blank>Eclipse Dirigible &trade;</a> is a Cloud Development Platform providing development tools and runtime environment. It supports full development life-cycle of on-demand applications by leveraging in-system programming models and rapid application development techniques.</p><br><br>
 	<p style="font-size: 1.2em">All the source code is licensed under the <a href="https://www.eclipse.org/legal/epl-v10.html" target=_blank>Eclipse Public License - v 1.0</a> and maintained at <a href="https://github.com/eclipse/dirigible" target=_blank>GitHub</a></p><br><br><br><br>
 	<div style="width: 32em">
-	<p style="font-size: 2em" align=center><img src="img/dirigible-flag.png" /></p>
-	<p style="font-size: 1.4em" align=center>Enjoy Programming Like Never Before</p></div>
+	<p style="font-size: 2.2em;" align=center><i class="logo-icon icon-dirigible">&#xe801;</i>&nbsp; <span style="font-family: Trebuchet MS">dirigible</span></p>
+	<p style="font-size: 1.4em; font-style: italic;" align=center>Enjoy Programming Like Never Before</p></div>
 	<br>
+	<script src="/services/v3/web/resources/themes/theme.js"></script>	
   </body>
  </html>
