awesome fonts - local

--- a/ide/ide-core/src/main/resources/ide/welcome.html
+++ b/ide/ide-core/src/main/resources/ide/welcome.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    	<meta charset="utf-8">
+    	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+    	<meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <title>Eclipse Dirigible &trade;</title>
+    	<title>Eclipse Dirigible &trade;</title>
 
-    <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
+    	<link href="/services/v3/web/resources/font-awesome-4.7.0/css/font-awesome.min.css" rel="stylesheet">
 	
 	<!-- jQuery -->
 	<script src="/services/v3/web/resources/jquery/2.0.3/jquery.min.js"></script>
