--- a/ide/ide-database/src/main/resources/ide-database/explorer/explorer.html
+++ b/ide/ide-database/src/main/resources/ide-database/explorer/explorer.html
@@ -7,7 +7,7 @@
 	
 	<script src="../../ide/ui/message-hub.js"></script>
 	
-	<link href="//maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
+	<link href="/services/v3/web/resources/font-awesome-4.7.0/css/font-awesome.min.css" rel="stylesheet">
 	
 	<!-- jQuery -->
 	<script src="/services/v3/web/resources/jquery/2.0.3/jquery.min.js"></script>
