--- a/ide/ide-workspace/src/main/resources/ide-workspace/workspace.html
+++ b/ide/ide-workspace/src/main/resources/ide-workspace/workspace.html
@@ -16,6 +16,8 @@
 	<!-- AngularJS -->
 	<script src="/services/v3/web/resources/angular/1.4.7/angular.min.js"></script>
 	<script src="/services/v3/web/resources/angular/1.4.7/angular-resource.min.js"></script>
+	<script src="/services/v3/web/resources/angular/1.4.7/angular-animate.min.js"></script>
+	<script src="/services/v3/web/resources/angular/1.4.7/angular-sanitize.min.js"></script>
 
 	<!-- jsTree -->
 	<link href="/services/v3/core/theme/jstree.css" rel="stylesheet">
@@ -27,6 +29,8 @@
 	
 	<!-- Custom IDE Styles -->
 	<link type="text/css" rel="stylesheet" href="/services/v3/core/theme/ide.css" />
+	
+	<script src="../ide/ui/ui-bootstrap-tpls-0.14.3.min.js"></script>
 	
 	<script src="workspace.js"></script>
 
@@ -48,14 +52,57 @@
 			  </div>
 			</div>
 			
-			<select ng-model="workspace.selectedWs" ng-options="o as o for o in workspace.workspaces" ng-change="workspace.workspaceSelected()"
-				class="dropdown btn btn-default dropdown-toggle" title="Workspaces"></select>
+			<button type="button" id="createWorkspace" ng-show=false data-toggle="modal" data-target="#dialogCreateWorkspace"></button>
+			<button type="button" id="createProject" ng-show=false data-toggle="modal" data-target="#dialogCreateProject"></button>
+			
 			<button type="button" class="btn btn-default" title="Publish" ng-click="workspace.publish()"><i class="fa fa-cloud-upload"></i></button>
 			<button type="button" class="btn btn-default" title="Export" ng-click="workspace.exportWorkspace()"><i class="fa fa-download"></i></button>
+			
+			<select ng-model="workspace.selectedWs" ng-options="o as o for o in workspace.workspaces" ng-change="workspace.workspaceSelected()"
+				class="dropdown btn btn-default dropdown-toggle" title="Workspaces"></select>
+			
 		</div>
 	</div>
 	
 	<div class="workspace"></div>
+	
+	<!-- Create Workspace -->
+	<div class="modal fade" id="dialogCreateWorkspace" tabindex="-1" role="dialog" aria-labelledby="dialogCreateWorkspaceLabel" aria-hidden="true">
+	    <div class="modal-header">
+	        <h4>Create Workspace</h4>
+	    </div>
+	    <div class="modal-body">
+	        <div class="form-group row">
+				<label class="col-xs-3 col-form-label">Name</label>
+				<div class="col-xs-9">
+					<input class="form-control" type="text" placeholder="workspace name" ng-model="workspace.workspaceName" required="required">
+				</div>
+			</div>
+	    </div>
+	    <div class="modal-footer">
+	      <button class="btn btn-primary" ng-click="workspace.okCreateWorkspace()" data-toggle="modal" data-target="#dialogCreateWorkspace">Create Workspace</button>
+	      <button class="btn btn-default" data-dismiss="modal">Cancel</button>
+	    </div>
+	</div>
+	
+	<!-- Create Project -->
+	<div class="modal fade" id="dialogCreateProject" tabindex="-1" role="dialog" aria-labelledby="dialogCreateProjectLabel" aria-hidden="true">
+	    <div class="modal-header">
+	        <h4>Create Project</h4>
+	    </div>
+	    <div class="modal-body">
+	        <div class="form-group row">
+				<label class="col-xs-3 col-form-label">Name</label>
+				<div class="col-xs-9">
+					<input class="form-control" type="text" placeholder="project name" ng-model="workspace.projectName" required="required">
+				</div>
+			</div>
+	    </div>
+	    <div class="modal-footer">
+	      <button class="btn btn-primary" ng-click="workspace.okCreateProject()" data-toggle="modal" data-target="#dialogCreateProject">Create Project</button>
+	      <button class="btn btn-default" data-dismiss="modal">Cancel</button>
+	    </div>
+	</div>
 
 </body>
 </html>
