--- a/ide/ide-database/src/main/resources/ide-database/explorer/explorer.html
+++ b/ide/ide-database/src/main/resources/ide-database/explorer/explorer.html
@@ -34,6 +34,8 @@
 
 	<div>
 		<div class="btn-group pull-right" role="group" aria-label="toolbar">
+			<button type="button" class="btn btn-default" title="Refresh" ng-click="refreshDatabase()"><i class="fa fa-refresh"></i></button>
+		
 			<select ng-model="selectedDatabase" ng-options="o as o for o in databases" ng-change="databaseChanged()"
 				class="dropdown btn btn-default dropdown-toggle" title="Databases"></select>
 			<select ng-model="selectedDatasource" ng-options="o as o for o in datasources" ng-change="datasourceChanged()"
