--- a/ide/ide-repository/src/main/resources/ide-repository/repository.html
+++ b/ide/ide-repository/src/main/resources/ide-repository/repository.html
@@ -37,6 +37,7 @@
 	<div>
 		<div class="btn-group pull-right" role="group" aria-label="toolbar">
 			<button type="button" class="btn btn-default" title="Export" ng-click="repository.exportRepository()"><i class="fa fa-download"></i></button>
+			<button type="button" class="btn btn-default" title="Refresh" ng-click="repository.refresh()"><i class="fa fa-refresh"></i></button>
 		</div>
 	</div>
 	
