--- a/ide/ide-core/src/main/resources/ide/index.html
+++ b/ide/ide-core/src/main/resources/ide/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -8,24 +9,19 @@
     <title>Eclipse Dirigible &trade; | Workbench </title>
 
 	<link rel="shortcut icon" type="image/png" href="img/favicon.png" />
-    <link href="/services/v3/web/resources/font-awesome-4.7.0/css/font-awesome.min.css" rel="stylesheet">
 	
-	<!-- jQuery -->
-	<script src="/services/v3/web/resources/jquery/2.0.3/jquery.min.js"></script>
-	
+	<!-- FontAwesome icon set -->
+    <link type="text/css" href="/services/v3/web/resources/font-awesome-4.7.0/css/font-awesome.min.css" rel="stylesheet">
+		
 	<!-- Twitter Bootstrap with Theme Support -->
-	<link rel="stylesheet" href="/services/v3/core/theme/bootstrap.min.css">
-	<script src="/services/v3/web/resources/bootstrap/3.3.7/bootstrap.min.js"></script>
-	
+	<link type="text/css" rel="stylesheet" href="/services/v3/core/theme/bootstrap.min.css">
+
 	<!-- GoldenLayout with Theme Support -->
-	<script type="text/javascript" src="/services/v3/web/resources/goldenlayout/1.5.9/goldenlayout.js"></script>
 	<link type="text/css" rel="stylesheet" href="/services/v3/web/resources/goldenlayout/1.5.9/goldenlayout-base.css" />
 	<link type="text/css" rel="stylesheet" href="/services/v3/core/theme/goldenlayout-theme.css" />
 	
 	<!-- Custom IDE Styles -->
 	<link type="text/css" rel="stylesheet" href="/services/v3/core/theme/ide.css" />
-	
-	<script src="ui/message-hub.js"></script>
     
 </head>
 
@@ -39,13 +35,23 @@
 	</div>
 	<div class="statusbar" status-bar>{{message}}</div>
 	
+	<!-- jQuery -->
+	<script type="text/javascript" src="/services/v3/web/resources/jquery/2.0.3/jquery.min.js"></script>
+	
+	<!-- Twitter Bootstrap with Theme Support -->
+	<script type="text/javascript" src="/services/v3/web/resources/bootstrap/3.3.7/bootstrap.min.js"></script>
+	
 	<!-- AngularJS -->
-	<script src="/services/v3/web/resources/angular/1.4.7/angular.min.js"></script>
-	<script src="/services/v3/web/resources/angular/1.4.7/angular-resource.min.js"></script>
-	
-	<script src="ui/ui-layout.js"></script>
-	<script src="ui/ui-core-ng-modules.js"></script>
-	
+	<script type="text/javascript" src="/services/v3/web/resources/angular/1.4.7/angular.min.js"></script>
+	<script type="text/javascript" src="/services/v3/web/resources/angular/1.4.7/angular-resource.min.js"></script>
+
+	<!-- GoldenLayout with Theme Support -->
+	<script type="text/javascript" src="/services/v3/web/resources/goldenlayout/1.5.9/goldenlayout.js"></script>
+
+	<script type="text/javascript" src="ui/message-hub.js"></script>	
+	<script type="text/javascript" src="ui/ui-layout.js"></script>
+	<script type="text/javascript" src="ui/ui-core-ng-modules.js"></script>
+
 	<script type="text/javascript">
 		angular.module('workbench', ['ngResource', 'ideUiCore'])
 		.config(["messageHubProvider", function(messageHubProvider) {
@@ -69,10 +75,6 @@
 						Layouts.manager.open(viewId, regionId);
 					}
 				}
-			};
-			
-			this.reset = function(){
-				Layouts.manager.reset();
 			};
 					
 		}]);
