--- a/ide/ide-core/src/main/resources/ide/index.html
+++ b/ide/ide-core/src/main/resources/ide/index.html
@@ -8,21 +8,20 @@
 
     <title>Eclipse Dirigible &trade; | Workbench </title>
 
-	<link rel="shortcut icon" type="image/png" href="img/favicon.png" />
-	
-	<!-- FontAwesome icon set -->
-    <link type="text/css" href="/services/v3/web/resources/font-awesome-4.7.0/css/font-awesome.min.css" rel="stylesheet">
-		
 	<!-- Twitter Bootstrap with Theme Support -->
 	<link type="text/css" rel="stylesheet" href="/services/v3/core/theme/bootstrap.min.css">
 
-	<!-- GoldenLayout with Theme Support -->
+		<!-- GoldenLayout with Theme Support -->
 	<link type="text/css" rel="stylesheet" href="/services/v3/web/resources/goldenlayout/1.5.9/goldenlayout-base.css" />
 	<link type="text/css" rel="stylesheet" href="/services/v3/core/theme/goldenlayout-theme.css" />
 	
 	<!-- Custom IDE Styles -->
 	<link type="text/css" rel="stylesheet" href="/services/v3/core/theme/ide.css" />
+	
+	<!-- FontAwesome icon set -->
+    <link type="text/css" href="/services/v3/web/resources/font-awesome-4.7.0/css/font-awesome.min.css" rel="stylesheet">
     
+	<link rel="shortcut icon" type="image/png" href="img/favicon.png" />
 </head>
 
 <body ng-app="workbench" ng-controller="WorkbenchController as wb">
@@ -39,7 +38,7 @@
 	<script type="text/javascript" src="/services/v3/web/resources/jquery/2.0.3/jquery.min.js"></script>
 	
 	<!-- Twitter Bootstrap with Theme Support -->
-	<script type="text/javascript" src="/services/v3/web/resources/bootstrap/3.3.7/bootstrap.min.js"></script>
+	<script type="text/javascript" src="/services/v3/web/resources/bootstrap/3.3.7/bootstrap.min.js" async></script>
 	
 	<!-- AngularJS -->
 	<script type="text/javascript" src="/services/v3/web/resources/angular/1.4.7/angular.min.js"></script>
