save all and open in new windows

--- a/ide/ide-core/src/main/resources/ide/index.html
+++ b/ide/ide-core/src/main/resources/ide/index.html
@@ -72,6 +72,12 @@
 						var viewId = msg.data.viewId;
 						var regionId = msg.data.regionId;
 						Layouts.manager.open(viewId, regionId);
+					},
+					'workbench.open': function(msg){
+						window.open(msg.data, '_blank');
+					},
+					'workbench.alert': function(msg){
+						alert(msg.data);
 					}
 				}
 			};
