save all from workspace

--- a/ide/ide-orion/src/main/resources/ide-orion/editor.html
+++ b/ide/ide-orion/src/main/resources/ide-orion/editor.html
@@ -129,6 +129,9 @@
 			messageHub.subscribe(function() {
 				saveContents(orionEditor.getText());
 			}, 'workbench.editor.save');
+			messageHub.subscribe(function() {
+				saveContents(orionEditor.getText());
+			}, 'workspace.editor.save');
 		</script>
 		
     </head>
