--- a/ide/ide-workspace/src/main/resources/ide-workspace/workspace.html
+++ b/ide/ide-workspace/src/main/resources/ide-workspace/workspace.html
@@ -55,8 +55,9 @@
 			<button type="button" id="createWorkspace" ng-show=false data-toggle="modal" data-target="#dialogCreateWorkspace"></button>
 			<button type="button" id="createProject" ng-show=false data-toggle="modal" data-target="#dialogCreateProject"></button>
 			
-			<button type="button" class="btn btn-default" title="Publish" ng-click="workspace.publish()"><i class="fa fa-cloud-upload"></i></button>
-			<button type="button" class="btn btn-default" title="Export" ng-click="workspace.exportWorkspace()"><i class="fa fa-download"></i></button>
+			<button type="button" class="btn btn-default" title="Save All" ng-click="workspace.saveAll()"><i class="fa fa-floppy-o"></i></button>
+			<button type="button" class="btn btn-default" title="Publish All" ng-click="workspace.publish()"><i class="fa fa-cloud-upload"></i></button>
+			<button type="button" class="btn btn-default" title="Export All" ng-click="workspace.exportWorkspace()"><i class="fa fa-download"></i></button>
 			
 			<button type="button" class="btn btn-default" title="Refresh" ng-click="workspace.refresh()"><i class="fa fa-refresh"></i></button>
 			
