--- a/ide/ide-core/src/main/resources/ide/ui/tmpl/menu.html
+++ b/ide/ide-core/src/main/resources/ide/ui/tmpl/menu.html
@@ -33,6 +33,7 @@
 					<li><a href="#" data-theme="default" class="theme-link" ng-click="selectTheme('default')">Default</a></li>
 					<li><a href="#" data-theme="wendy" class="theme-link" ng-click="selectTheme('wendy')">Wendy</a></li>
 					<li><a href="#" data-theme="baroness" class="theme-link" ng-click="selectTheme('baroness')">Baroness</a></li>
+					<li><a href="#" data-theme="simone" class="theme-link" ng-click="selectTheme('simone')">Simone</a></li>
 				</ul>
 			  </li>				  
 			  <li class="hidden-xs">
