login pages styling

--- a/releng/server-runtime/src/main/webapp/error.html
+++ b/releng/server-runtime/src/main/webapp/error.html
@@ -10,14 +10,14 @@
 	<!-- Twitter Bootstrap with Theme Support -->
 	<link type="text/css" rel="stylesheet" href="/services/v3/core/theme/bootstrap.min.css">
 	
-	<link rel="shortcut icon" type="image/png" href="img/favicon.png" />
+	<link rel="shortcut icon" type="image/png" href="/services/v3/web/ide/img/favicon.png" />
 </head>
 <body>
 <div class="container">
     <div class="row">
     <div class="error-template">
-	    <h1>Oops!</h1>
-	    <h2>Unexpected error occurred</h2>
+	    <h2>Oops!</h2>
+	    <h3>Unexpected error occurred</h3>
 	    <div class="error-details">
 		Sorry, an error has occurred<br>
 	    </div>
