--- a/releng/server-runtime/src/main/webapp/404.html
+++ b/releng/server-runtime/src/main/webapp/404.html
@@ -10,7 +10,7 @@
 	<!-- Twitter Bootstrap with Theme Support -->
 	<link type="text/css" rel="stylesheet" href="/services/v3/core/theme/bootstrap.min.css">
 	
-	<link rel="shortcut icon" type="image/png" href="img/favicon.png" />
+	<link rel="shortcut icon" type="image/png" href="/services/v3/web/ide/img/favicon.png" />
 </head>
 <body>
 <div class="container">
